fix can't change user password

--- a/LockConfigurationTool/Info.plist
+++ b/LockConfigurationTool/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>门锁安装助手需要使用蓝牙来配置门锁</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>门锁安装助手需要使用蓝牙来配置门锁</string>
 	<key>NSCameraUsageDescription</key>
 	<string>门锁安装助手需要使用相机, 扫描二维码</string>
 	<key>NSPhotoLibraryUsageDescription</key>
